<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_advanced_level"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center|center_vertical"
        android:text="@string/advanced_level"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_identify_car_image" />

    <Button
        android:id="@+id/button_identify_the_car_make"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center|center_vertical"
        android:text="@string/identify_the_car_make"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_pic" />

    <Button
        android:id="@+id/button_hints"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center|center_vertical"
        android:text="@string/hints"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_identify_the_car_make" />

    <Button
        android:id="@+id/button_identify_car_image"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center|center_vertical"
        android:text="@string/identify_the_car_image"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hints" />

    <Switch
        android:id="@+id/switch_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/countdown"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_advanced_level" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="331dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/name" />

    <ImageView
        android:id="@+id/logo_pic"
        android:layout_width="209dp"
        android:layout_height="153dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/car" />

</androidx.constraintlayout.widget.ConstraintLayout>