<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedLevelActivity">

<!--    <ImageView-->
<!--        android:id="@+id/background_image_4"-->
<!--        android:layout_width="421dp"-->
<!--        android:layout_height="731dp"-->
<!--        android:contentDescription="@string/background_design"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@drawable/big_paw_light_gradient" />-->

    <ImageView
        android:id="@+id/random_image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_1_description"
        app:layout_constraintEnd_toStartOf="@+id/random_image_2"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/random_image_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/image_2_sescription"
        app:layout_constraintBottom_toTopOf="@+id/image_2_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/image_1_answer"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_image_1" />

    <TextView
        android:id="@+id/image_3_answer"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_marginBottom="100dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/correct_answer_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/image_2_answer"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/random_image_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toEndOf="@+id/image_1_answer" />

    <ImageView
        android:id="@+id/random_image_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/random_image_description"
        app:layout_constraintBottom_toTopOf="@+id/image_3_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_1_answer"
        app:layout_constraintVertical_bias="0.547"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/correct_answer_txt"
        android:layout_width="95dp"
        android:layout_height="51dp"
        android:layout_marginBottom="120dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>