<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HintsActivity">

<!--    <ImageView-->
<!--        android:id="@+id/background_image_4"-->
<!--        android:layout_width="421dp"-->
<!--        android:layout_height="731dp"-->
<!--        android:contentDescription="@string/background_design"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@drawable/big_paw_light_gradient" />-->

    <ImageView
        android:id="@+id/hint_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/random_car_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/correct_answer_text"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginBottom="104dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />


    <GridView
        android:id="@+id/gridViewAnswer"
        android:layout_width="334dp"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:columnWidth="40dp"
        android:horizontalSpacing="4dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_image"
        android:layout_alignParentStart="true"></GridView>

    <GridView
        android:id="@+id/gridViewSuggestion"
        android:layout_width="334dp"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:columnWidth="40dp"
        android:horizontalSpacing="4dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="4dp"
        app:layout_constraintBottom_toTopOf="@+id/correct_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridViewAnswer"
        android:layout_alignParentStart="true"></GridView>

    <TextView
        android:id="@+id/correct_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/correct_answer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="answer" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/submit"
        android:onClick="submitHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>