<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/random_car_image"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/random_car_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/carMake_spinner"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_carMake_instructions" />

    <Button
        android:id="@+id/submit_button_search"
        style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center|center_horizontal"
        android:onClick="submitCheck"
        android:text="@string/identify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carMake_spinner"
        app:rippleColor="#88FFFFFF" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_car_image" />

    <TextView
        android:id="@+id/correct_carMake_answer"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:textColor="#D4E813"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/circular_progress_timer"
        app:layout_constraintEnd_toEndOf="@+id/circular_progress_timer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/circular_progress_timer"
        app:layout_constraintTop_toTopOf="@+id/circular_progress_timer"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/circular_progress_timer"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:progress="0"
        android:progressDrawable="@drawable/circular_progress"
        android:rotation="-90"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/random_car_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/identify_carMake_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center|center_horizontal"
        android:text="@string/instruction_label"
        android:textColor="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correct_carMake_answer" />

</androidx.constraintlayout.widget.ConstraintLayout>